--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,12 +8,18 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
+
 <body>
     <div class="wrapper">
         <header>
             <h1>
                 <a href="/">Just Tech News</a>
             </h1>
+
+            <nav>
+                <a href="/login">login</a>
+            </nav>
+
         </header>
         <main>
             {{{ body }}}
