--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,18 +8,16 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
-
 <body>
     <div class="wrapper">
         <header>
             <h1>
                 <a href="/">Just Tech News</a>
             </h1>
-
             <nav>
+                <button id="logout" class="btn-no-style">logout</button>
                 <a href="/login">login</a>
             </nav>
-
         </header>
         <main>
             {{{ body }}}
